# insightcopilot-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: ecommerce_products.csv  product_strategy.md  test_data.csv
docs/: 404.html  demo-script.md  demo-walkthrough.md  deploy.md  index.html
docs/architecture/: overview.md
docs/assets/: index-B54tVOwZ.js  index-BMuYj7d0.js  index-BVLv_3HN.js  index-BgRye8ki.js  index-C0lUYZA0.js  index-CWYigr3b.css  index-CyQVU78V.css  index-D4cjoURd.js  index-DJq1BhSb.css  index-DLs8yZcB.css  index-Dnm69mVb.js  index-Dt_RnsIy.js  index-LwucdMHE.css
docs/decisions/: adr-001-clean-architecture.md  adr-002-minimal-dependencies.md
docs/screenshots/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
src/domain/: llm_client.py
src/infrastructure/: gemini_error_mapper.py  openai_error_mapper.py
tests/: conftest.py
tests/unit/: test_answer_analytical_query_use_case.py  test_assess_quality_use_case.py  test_auto_etl_use_case.py  test_column_classifier.py  test_create_dataset_use_case.py  test_csv_dataset_loader.py  test_curated_result_entity.py  test_curated_result_repository.py  test_dataset.py  test_datasets_endpoint.py  test_dependencies.py  test_documents_endpoint.py  test_etl_narrative_context_builder.py  test_execute_etl_use_case.py  test_executive_summary_context_builder.py  test_gemini_llm_client.py  (+29 more)
(+127 files in other folders)
